fix to gap created by image

--- a/css/app.css
+++ b/css/app.css
@@ -3,10 +3,14 @@ body {
   background: url(https://images.unsplash.com/photo-1508568230916-c2692a5d7b1d?auto=format&fit=crop&w=1052&q=80);
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   font-family: Lato;
   color: #000307;
 }
 
+html {
+  height: 100%;  
+}
 
 
 html, body {
